# multi_map_nav

./: readme.md
config/: move_base_params.yaml
include/multi_map_nav/: navigation_server.h
launch/: multi_map_navigation.launch
maps/: map1.pgm  map1.yaml  map2.pgm
multi_map_nav/: CMakeLists.txt  package.xml
multi_map_nav/action/: NavigateToGoal.action
multi_map_nav/database/: wormholes.db
multi_map_nav/include/multi_map_nav/: map_switcher.h  wormhole_manager.h
multi_map_nav/launch/: multi_map_nav.launch
multi_map_nav/maps/: map3.pgm  map3.yaml
multi_map_nav/src/: map_switcher.cpp  navigation_server.cpp  set_action.cpp
src/: map_switcher.cpp  set_action.cpp  wormhole_manager.cpp
